--- a/imports/ui/pages/inventory.html
+++ b/imports/ui/pages/inventory.html
@@ -1,4 +1,39 @@
 <template name="inventory">
+  <!-- Modal Trigger -->
+  <a class="waves-effect waves-light btn btn-modal" href="#modal1">Add an item</a>
+
+  <!-- Modal Structure -->
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+    <h4>Add an item to your inventory</h4>
+      <form class="col s12 form-create-item">
+        <div class="row">
+          <div class="input-field col s6">
+            <input id="item_name" type="text" class="validate">
+            <label for="item_name">Item Name</label>
+          </div>
+          <div class="input-field col s6">
+            <input id="item_quantity" type="text" class="validate">
+            <label for="item_quantity">Quantity</label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="input-field col s6">
+            <input id="item_retail" type="number" class="validate">
+            <label for="item_retail">Retail Price</label>
+          </div>
+          <div class="input-field col s6">
+            <input id="item_wholesale" type="number" class="validate">
+            <label for="item_wholesale">Wholesale Price</label>
+          </div>
+        </div>
+        <button class="waves-effect waves-light btn btn-submit" type="submit">Create</button>
+      </form>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+    </div>
+  </div>
   <table>
     <thead>
       <tr>
@@ -12,42 +47,13 @@
     <tbody>
       {{#each items}}
       <tr>
-        <td>{{name}}</td>
-        <td>{{quantity}}</td>
-        <td>{{retail}}</td>
-        <td>{{wholesale}}</td>
+        <td>{{> editableText collection="items" field="name"}}</td>
+        <td>{{> editableText collection="items" field="quantity"}}</td>
+        <td>{{> editableText collection="items" field="retail"}}</td>
+        <td>{{> editableText collection="items" field="wholesale"}}</td>
       </tr>
       {{/each}}
     </tbody>
   </table>
-  {{>inventory_insert}}
-</template>
-
-<template name="inventory_insert">
-  <div class="row">
-    <form class="col s12 form-create-item">
-      <div class="row">
-        <div class="input-field col s6">
-          <input id="item_name" type="text" class="validate">
-          <label for="item_name">Item Name</label>
-        </div>
-        <div class="input-field col s6">
-          <input id="item_quantity" type="text" class="validate">
-          <label for="item_quantity">Quantity</label>
-        </div>
-      </div>
-      <div class="row">
-        <div class="input-field col s6">
-          <input id="item_retail" type="number" class="validate">
-          <label for="item_retail">Retail Price</label>
-        </div>
-        <div class="input-field col s6">
-          <input id="item_wholesale" type="number" class="validate">
-          <label for="item_wholesale">Wholesale Price</label>
-        </div>
-      </div>
-      <button class="waves-effect waves-light btn btn-submit" type="submit">Create</button>
-    </form>
-    <button class="waves-effect waves-light btn btn-delete" type="submit">Delete All Items</button>
-  </div>
+  <button class="waves-effect waves-light btn btn-delete" type="submit">Delete An Item</button>
 </template>
